<resources>
    <string name="app_name">College</string>
    <string name="nav_drawer_open">Open Navigation drawer</string>
    <string name="nav_drawer_close">Close Navigation drawer</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="time_table">Time-Table</string>
    <string name="practice">Practice</string>
    <string name="syllabus">Syllabus</string>
    <string name="notifications">Notifications</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="user">User</string>

    <string-array name="dept">
        <item>Select Department</item>
        <item>COMP</item>
        <item>IT</item>
        <item>ENTC</item>
        <item>ELEX</item>
        <item>MECH</item>
        <item>CIVIL</item>
    </string-array>

    <string-array name="sem">
        <item>Select Semester</item>
        <item>Semester-III</item>
        <item>Semester-IV</item>
        <item>Semester-V</item>
        <item>Semester-VI</item>
        <item>Semester-VII</item>
        <item>Semester-VIII</item>
    </string-array>

    <string-array name="year">
        <item>Select Year</item>
        <item>FE</item>
        <item>SE</item>
        <item>TE</item>
        <item>BE</item>
    </string-array>


    <string-array name="div">
        <item>Select Division</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>


</resources>