<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_pic"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/timetable"
            android:title="@string/time_table" />
        <item
            android:id="@+id/nav_practice"
            android:icon="@drawable/practice"
            android:title="@string/practice" />
        <item
            android:id="@+id/nav_syllabus"
            android:icon="@drawable/syllabus"
            android:title="@string/syllabus" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>